--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -10,7 +10,7 @@
 
   <body>
 
-    <h1>Original thinkers</h1>
+    <h1>Original Thinkers</h1>
     <div class="col-lg-4 col-md-6 col-sm-12">
       <section id="ae">
         <h2><a href="https://en.wikipedia.org/wiki/Albert_Einstein" target="_blank">Albert Einstein</a></h2>
