--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -39,7 +39,7 @@ Bootstrap 4.5.0 xs-based classes are upto 575px
           </button>
 
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul id="nav-list" class="navbar-nav mr-auto">
+            <ul id="nav-list" class="navbar-nav mr-auto text-center">
               <li class="nav-item">
                 <a class="nav-link" href="#"><span>Chicken</span></a>
               </li>
