Added link to go back to home page

--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -9,7 +9,7 @@
   </head>
 
   <body>
-
+<div>
     <h1>Original Thinkers</h1>
     <div class="col-lg-4 col-md-6 col-sm-12">
       <section id="ae">
@@ -35,7 +35,10 @@
         </p>
       </section>
     </div>
-
+  </div>
+    <footer>
+      <a href="https://dhruvmanila.github.io/course-assignments/">Back to Course Assignments</a>
+    </footer>
   </body>
 
 </html>
