--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -177,7 +177,9 @@ I have completed the OPTIONAL, UNGRADED ASSIGNMENT as well.
 
     </div>
 
-
+    <footer>
+      <a href="https://dhruvmanila.github.io/course-assignments/">Back to Course Assignments</a>
+    </footer>
 
 
 
