--- a/module4-solution/index.html
+++ b/module4-solution/index.html
@@ -35,6 +35,17 @@
 	p {
 		font-size: 1.3em;
 	}
+  footer {
+    text-align: center;
+  }
+  footer>a{
+    color: gray;
+    text-decoration: none;
+  }
+  footer>a:hover {
+    color: black;
+    text-decoration: underline;
+  }
   /********** Small devices only **********/
   @media (max-width: 992px) {
     body {
@@ -58,6 +69,10 @@ Hello Frank
 Hello Larry
 Hello Paula
 Hello Laura
-Good Bye Jim</code></pre>
+Good Bye Jim</code></pre><br><hr>
+
+<footer>
+      <a href="https://dhruvmanila.github.io/course-assignments/">Back to Course Assignments</a>
+    </footer>
 </body>
 </html>
