Change git URL, README.md, added tribute page

--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -37,7 +37,7 @@
     </div>
   </div>
     <footer>
-      <a href="https://dhruvmanila.github.io/course-assignments/">Back to Course Assignments</a>
+      <a href="https://dhruvmanila.github.io/projects/">Back to Projects</a>
     </footer>
   </body>
 
