--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -178,7 +178,7 @@ I have completed the OPTIONAL, UNGRADED ASSIGNMENT as well.
     </div>
 
     <footer>
-      <a href="https://dhruvmanila.github.io/course-assignments/">Back to Course Assignments</a>
+      <a href="https://dhruvmanila.github.io/projects/">Back to Projects</a>
     </footer>
 
 
