--- a/module4-solution/index.html
+++ b/module4-solution/index.html
@@ -72,7 +72,7 @@ Hello Laura
 Good Bye Jim</code></pre><br><hr>
 
 <footer>
-      <a href="https://dhruvmanila.github.io/course-assignments/">Back to Course Assignments</a>
+      <a href="https://dhruvmanila.github.io/projects/">Back to Projects</a>
     </footer>
 </body>
 </html>
