--- a/module5-solution/index.html
+++ b/module5-solution/index.html
@@ -98,7 +98,7 @@
       <div class="text-center">&copy; Copyright David Chu's China Bistro 2016</div>
     </div><br>
     <div class="text-center back-link">
-      <a href="https://dhruvmanila.github.io/course-assignments/">Back to Course Assignments</a>
+      <a href="https://dhruvmanila.github.io/projects/">Back to Projects</a>
     </div>
   </footer>
 
